unpackaged/main/default/objects/Account/fields/Checkbox__c.field-meta.xml
<CustomField>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </CustomField>