unpackaged/main/default/objects/Account/fields/d1__c.field-meta.xml
<CustomField>
        <fullName>d1__c</fullName>
        <label>d1</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>