unpackaged/main/default/objects/Account/fields/d2__c.field-meta.xml
<CustomField>
        <fullName>d2__c</fullName>
        <label>d2</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>