unpackaged/main/default/objects/Account/fields/Demoname__c.field-meta.xml
<CustomField>
        <fullName>Demoname__c</fullName>
        <label>Demoname</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>