unpackaged/main/default/objects/Account/fields/FrankIsGreat__c.field-meta.xml
<CustomField>
        <fullName>FrankIsGreat__c</fullName>
        <description>Hello</description>
        <label>FrankIsGreat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>