unpackaged/main/default/objects/Account/fields/HigherEd__c.field-meta.xml
<CustomField>
        <fullName>HigherEd__c</fullName>
        <label>HigherEd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>