unpackaged/main/default/objects/Account/fields/LovelyField__c.field-meta.xml
<CustomField>
        <fullName>LovelyField__c</fullName>
        <label>LovelyField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>