unpackaged/main/default/objects/Account/fields/MyLovelyField__c.field-meta.xml
<CustomField>
        <fullName>MyLovelyField__c</fullName>
        <label>MyLovelyField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>