unpackaged/main/default/objects/Account/fields/MyNewField__c.field-meta.xml
<CustomField>
        <fullName>MyNewField__c</fullName>
        <label>MyNewField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>