unpackaged/main/default/objects/Account/fields/MyNewNumberField__c.field-meta.xml
<CustomField>
        <fullName>MyNewNumberField__c</fullName>
        <description>This is my field description</description>
        <label>MyNewNumberField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>