unpackaged/main/default/objects/Account/fields/NewFieldName__c.field-meta.xml
<CustomField>
        <fullName>NewFieldName__c</fullName>
        <label>NewFieldName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>