unpackaged/main/default/objects/Account/fields/NEWTAB__c.field-meta.xml
<CustomField>
        <fullName>NEWTAB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NEWTAB</label>
        <type>Checkbox</type>
    </CustomField>