unpackaged/main/default/objects/Account/fields/Number_of_employees__c.field-meta.xml
<CustomField>
        <fullName>Number_of_employees__c</fullName>
        <description>poeople</description>
        <label>Number of employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>