unpackaged/main/default/objects/Account/fields/Scratch__c.field-meta.xml
<CustomField>
        <fullName>Scratch__c</fullName>
        <label>Scratch</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>