unpackaged/main/default/objects/Account/fields/Super_label__c.field-meta.xml
<CustomField>
        <fullName>Super_label__c</fullName>
        <description>Example description</description>
        <label>Super label</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>