unpackaged/main/default/objects/Account/recordTypes/NewRecord.recordType-meta.xml
<RecordType>
        <fullName>NewRecord</fullName>
        <active>true</active>
        <description>A new record type</description>
        <label>NewRecord</label>
    </RecordType>