unpackaged/main/default/objects/Account/recordTypes/Test.recordType-meta.xml
<RecordType>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </RecordType>