unpackaged/main/default/objects/Account/listViews/Test_View_1.listView-meta.xml
<ListView>
        <fullName>Test_View_1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <label>Test-View-1</label>
    </ListView>